src/node/static/css/main.css
/* ... */
.tooltip-visible {
    opacity: 1;
    transform: translateY(-110%);
}

.tooltip-hidden {
    opacity: 0;
    transform: translateY(-100%);
}

/*  <div class="trim-info" tooltip="{{modal.title}}">{{modal.title}}</div> */
.trim-info {
    max-width: 50px;
    display: inline-block;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    line-height: 15px;
    position: relative;
}


.control-box {
    margin: 0 auto;
    width: 100px;
    display: inline;
    text-align: center;
}


/* Dropdown Button */
/* https://codepen.io/raneio/pen/NbbZEM */


label.dropdown {
    font-weight: normal;
    font-style: normal;
    color: #000000;
}

/* Dropdown */

.dropdown {
    display: inline-block;
    position: relative;
}

.dd-button {

    margin-bottom: 0;
    font-size: 14px;
    font-weight: 400;
    line-height: 1.42857143;
    text-align: center;
    white-space: nowrap;
    vertical-align: middle;
    -ms-touch-action: manipulation;
    touch-action: manipulation;
    cursor: pointer;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    background-image: none;
    border: 1px solid #4cae4c;
    border-radius: 4px;

    display: inline-block;
    padding: 0.45em 2.5em 0.40em 1em;
    background-color: #5cb85c;
    cursor: pointer;
    white-space: nowrap;
    color: white;
}

.dd-button.disabled {
    opacity: 0.6;
}

.dd-button.disabled:hover {
    background-color: none;
}

.dd-button:after {
    content: '';
    position: absolute;
    top: 50%;
    right: 15px;
    transform: translateY(-50%);
    width: 0;
    height: 0;
    border-left: 5px solid transparent;
    border-right: 5px solid transparent;
    border-top: 5px solid black;
}

.dd-button:hover {
    background-color: #4cA84c;
}

.dd-button#tracking-btn {
    background-color: #5cb85c;
    border: 1px solid #4cae4c;
}

.dd-button#video-btn {
    background-color: #5cb85c;
    border: 1px solid #4cae4c;
}

.dd-button#options-btn {
    background-color: #5FA4E7;
    border: 1px solid #5FA4E7;
}

.dd-button#power-btn {
    background-color: #F15051;
    border: 1px solid #F15051;
}

.dd-input {
    display: none;
}

.dd-menu {
    position: absolute;
    top: 100%;
    border: 1px solid #ccc;
    border-radius: 4px;
    padding: 0;
    margin: 2px 0 0 0;
    box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.1);
    background-color: #ffffff;
    list-style-type: none;
}

.dd-menu li.disabled {
    color: #aaaaaa;
}

.dd-input+.dd-menu {
    display: none;
}

.dd-input:checked+.dd-menu {
    display: block;
}

.dd-menu li {
    padding: 10px 20px;
    cursor: pointer;
    white-space: nowrap;
}

.dd-menu li:hover {
    background-color: #f6f6f6;
}

.dd-menu li.disabled:hover {
    background-color: #ffffff;
}


.dd-menu li a {
    display: block;
    margin: -10px -20px;
    padding: 10px 20px;
}

.dd-menu li.divider {
    padding: 0;
    border-bottom: 1px solid #cccccc;
}

/*
 * Adapted from: https://codepen.io/nazarelen/pen/rLgLrA
 *
 *
 */

.header ul {
    margin: 0;
    width: 100%;
    list-style: none;
    position: unset;
    bottom: 30px;
    left: 0;
    padding: 0 1%;
}

.header ul:after {
    content: '';
    display: table;
    clear: both;
}

.header li {
    width: 31.3333333333%;
    margin: 0 1%;
    float: left;
    padding: 10px;
    border: 2px solid #363636;
    border-radius: 4px;
    position: relative;
    text-align: center;
    color: #4E203C;
}

.header li:before {
    position: absolute;
    top: -25px;
    left: 50%;
    margin-left: -15px;
    width: 30px;
    height: 30px;
    background: #363636;
    color: white;
    line-height: 30px;
    text-align: center;
    border-radius: 50%;
    font-family: FontAwesome;
}

.header li:nth-child(1):before {
    content: "\f1eb"
}

.header li:nth-child(2):before {
    content: "\f017"
}

.header li:nth-child(3):before {
    content: "\f0eb"
}

.header h1 {
    text-transform: uppercase;
    font-weight: 400;
    line-height: 1;
    margin-top: 10px;
    margin-bottom: 40px;
    text-align: center;
    font-size: 40px;
}

.header h1 span {
    color: #4E203C;
    display: block;
    font-size: .45em;
    letter-spacing: 3px;
}

.header h1 i {
    font-style: normal;
    text-transform: none;
    font-family: 'Playfair Display', serif;
}

/*
Larger and nicer select section
*/

.custom-select-wrap {
    border-radius: 3px;
    position: relative;
    z-index: 1;
    height: 42px;
    background: #fff;
}

.custom-select-wrap .select-icon {
    z-index: 1;
    padding: 1px;
    position: absolute;
    width: 18px;
    height: 18px;
    left: 160px;
    top: 12px;
    pointer-events: none;
}

custom-select-wrap .select-icon svg {
    width: 14px;
    height: 30px;
    position: absolute;
    fill: #5a5f73;
    padding: 1px;
}

.custom-select-wrap .select-icon svg:first-child {
    -webkit-transform: rotate(180deg);
    transform: rotate(180deg);
    top: -12px;
}

.custom-select-wrap select {
    z-index: 0;
    position: relative;
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    width: 180px;
    border: none;
    cursor: pointer;
    padding: 0 24px 0 12px;
    height: 42px;
    line-height: 42px;
    font-size: 1.2em;
    color: #5a5f73;
    background: transparent;
}

.select-icon svg {
    width: 14px;
    height: 30px;
    position: absolute;
    fill: #5a5f73;
    padding: 1px;
}

/*
 * Labels inside form fields and nicer looking text inputs
 * Inspiration from http://steadicat.github.io/labels/
 *
*/

.input {
    display: block;
}

.input span {
    position: absolute;
    z-index: 1;
    cursor: text;
    pointer-events: none;
    color: #999;
    padding: 7px;
    line-height: 17px;
    margin-top: 2px;
    /* margin-left: 2px; */
}

.input input,
.input textarea,
.input select {
    z-index: 0;
    padding: 6px;
    margin: 0;
    font: inherit;
    line-height: 17px;
}
/* ... */

